--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=8000
+DATABASE_URL=postgresql://neondb_owner:Mk21CWIRAYdG@ep-billowing-math-a9tw5q43-pooler.gwc.azure.neon.tech/neondb?sslmode=require
