--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^6.3.0",
     "@prisma/client": "6.0.1",
     "D": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "helmet": "^8.0.0",
     "prisma": "^6.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
