--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=8000
-DATABASE_URL=postgresql://neondb_owner:Mk21CWIRAYdG@ep-billowing-math-a9tw5q43-pooler.gwc.azure.neon.tech/neondb?sslmode=require
-# DATABASE_URL=postgres://citus:5472Kelcho@c-personal-projects.fpgn2ngfwypal7.postgres.cosmos.azure.com:5432/Personal-Projects?sslmode=require
+DATABASE_URL=
